<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>performance_test</name>
  <version>0.0.1</version>
  <description>Tool to test performance of ROS2 and DDS data layers and communication.</description>
  <maintainer email="andreas.pasternak@apex.ai">Andreas Pasternak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>benchmark_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>fastrtps_cmake_module</build_depend>
  <build_depend>osrf_testing_tools_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_fastrtps</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
